# smoke-optimiser

./: .gitignore  CHANGELOG.md  GEMINI.md  Justfile  LICENSE  PRD-smoke-optimiser.md  Plan-CLI.md  Plan-pytest-plugin.md  README.md  pyproject.toml  time_test.py
.githooks/: pre-commit
.github/workflows/: ci.yml  precommit.yml  release-please.yml  release.yml
.jules/: bolt.md  sentinel.md
scripts/: branch_summary.py
smoke_optimiser/: __main__.py  cli.py  config.py  environment.py  plugin.py
smoke_optimiser/optimiser/: filters.py  greedy.py  models.py
smoke_optimiser/profiler/: models.py  parser.py  runner.py
smoke_optimiser/reports/: repro.py  smoke_suite.py  summary.py
tests/: test_cli.py  test_cli_integration.py  test_config.py  test_e2e.py  test_environment.py  test_filters.py  test_greedy.py  test_optimiser_models.py  test_parser.py  test_plugin.py  test_profiler_models.py  test_reports.py  test_runner.py
