[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smoke-optimiser"
version = "0.2.0"
requires-python = ">=3.12"
description = "A Python CLI tool and pytest plugin to identify and run a minimal smoke test suite."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mike Lawther", email = "mike.lawther@gmail.com" }]
keywords = ["pytest", "testing", "smoke-test", "coverage", "optimisation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer~=0.9",
    "pydantic~=2.0",
    "coverage~=7.0",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "ijson~=3.5",
]

[project.urls]
"Homepage" = "https://github.com/lawther/smoke-optimiser"
"Repository" = "https://github.com/lawther/smoke-optimiser"
"Bug Tracker" = "https://github.com/lawther/smoke-optimiser/issues"

[project.optional-dependencies]
machine = ["psutil~=7.0"]
dev = ["ruff~=0.15.16", "pytest"]

[project.scripts]
smoke-optimiser = "smoke_optimiser.__main__:main"

[project.entry-points."pytest11"]
smoke_optimiser = "smoke_optimiser.plugin"

[tool.ruff]
line-length = 120
# these are explanation of the rules that are selected:
# B: Basic checks
# C4: Code complexity checks
# D: Docstring checks
# E: Error checks
# F: Formatting checks
# I: Import checks
# S: Bandit checks
# ICN: Import convention checks
# PGH: Python grammar checks
# PL: Pylint checks
# RUF: Ruff checks
# UP: Unused code checks
# ANN: Type annotation checks
# ASYNC: Async code checks
# SIM: Simple checks
# LOG: Logging checks
lint.select = [
    "B",
    "C4",
    "D",
    "E",
    "F",
    "I",
    "S",
    "ICN",
    "PGH",
    "PL",
    "RUF",
    "UP",
    "ANN",
    "ASYNC",
    "SIM",
    "LOG",
    "DTZ",
]
lint.ignore = [
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]
lint.per-file-ignores = { "tests/*" = ["S101"], "scripts/*" = ["S603", "S607"] }
lint.pydocstyle.convention = "google"

[tool.uv.sources]
python-lint-hooks = { git = "https://github.com/lawther/python-lint-hooks", tag = "v0.10.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 10
addopts = "--cov=smoke_optimiser --cov-report=term-missing --cov-branch"
filterwarnings = [
    "error::RuntimeWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
    "error::pytest_cov.engine.CentralCovContextWarning",
    "error::coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
branch = true
source = ["smoke_optimiser"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/CLAUDE.md",
    "/GEMINI.md",
    "/PRD-smoke-optimiser.md",
    "/uv.lock",
    "/tests",
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pytest-randomly~=4.0",
    "pytest-timeout~=2.4",
    "python-lint-hooks",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
